[gd_scene load_steps=12 format=3 uid="uid://brxe6x2arf7xb"]

[ext_resource type="Script" path="res://prefab/UI/PauseMenu.gd" id="1_674uc"]
[ext_resource type="Texture2D" uid="uid://8edplubtbkbr" path="res://assets/UI/wood-box.png" id="1_l6wjs"]
[ext_resource type="Texture2D" uid="uid://cqfo8k23gm0vc" path="res://assets/UI/text-paper.png" id="2_bcsdc"]
[ext_resource type="PackedScene" uid="uid://bpuv6b1p4ejhc" path="res://prefab/audio/PauseSound.tscn" id="2_iemml"]
[ext_resource type="FontFile" uid="uid://bddtsccx0qour" path="res://assets/UI/Fonts/dogicapixel.otf" id="3_2dmkg"]
[ext_resource type="FontFile" uid="uid://dabqnx5sqarav" path="res://assets/UI/Fonts/dogicapixelbold.otf" id="3_uiekp"]
[ext_resource type="PackedScene" uid="uid://wf8mpe72xyhu" path="res://prefab/audio/UnpauseSound.tscn" id="3_wa2n5"]
[ext_resource type="Texture2D" uid="uid://dnmhbqlysi5ph" path="res://assets/UI/red-button-normal.png" id="4_co3w6"]
[ext_resource type="Texture2D" uid="uid://cgoomtgcn04sq" path="res://assets/UI/red-button-pressed.png" id="5_a0wnw"]
[ext_resource type="Texture2D" uid="uid://cl20mjeo1aqyx" path="res://assets/UI/red-button-hover.png" id="6_mxhja"]
[ext_resource type="Texture2D" uid="uid://6py808jaoso2" path="res://assets/UI/button_disabled.png" id="7_keclf"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = -239.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_674uc")
pause_sound_scene = ExtResource("2_iemml")
unpause_sound_scene = ExtResource("3_wa2n5")

[node name="BG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l6wjs")
patch_margin_left = 24
patch_margin_top = 16
patch_margin_right = 24
patch_margin_bottom = 16

[node name="M" type="MarginContainer" parent="BG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="V" type="VBoxContainer" parent="BG/M"]
layout_mode = 2
theme_override_constants/separation = 1
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="BG/M/V"]
layout_mode = 2
size_flags_vertical = 6
texture = ExtResource("2_bcsdc")
patch_margin_left = 16
patch_margin_top = 8
patch_margin_right = 16
patch_margin_bottom = 15

[node name="Head" type="Label" parent="BG/M/V/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -5.0
offset_right = 41.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.819608, 0.541176, 0.137255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.215686)
theme_override_fonts/font = ExtResource("3_uiekp")
theme_override_font_sizes/font_size = 8
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="V" type="VBoxContainer" parent="BG/M/V"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.56
theme_override_constants/separation = 0
alignment = 1

[node name="PResumeBtn" type="TextureButton" parent="BG/M/V/V"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("4_co3w6")
texture_pressed = ExtResource("5_a0wnw")
texture_hover = ExtResource("6_mxhja")
texture_disabled = ExtResource("7_keclf")
stretch_mode = 3

[node name="Label" type="Label" parent="BG/M/V/V/PResumeBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -6.0
offset_right = 22.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(24.75, 3)
theme_override_fonts/font = ExtResource("3_2dmkg")
theme_override_font_sizes/font_size = 8
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PLoadBtn" type="TextureButton" parent="BG/M/V/V"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("4_co3w6")
texture_pressed = ExtResource("5_a0wnw")
texture_hover = ExtResource("6_mxhja")
texture_disabled = ExtResource("7_keclf")
stretch_mode = 3

[node name="Label" type="Label" parent="BG/M/V/V/PLoadBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -6.0
offset_right = 22.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(24.75, 3)
theme_override_fonts/font = ExtResource("3_2dmkg")
theme_override_font_sizes/font_size = 8
text = "load"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PExitBtn" type="TextureButton" parent="BG/M/V/V"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("4_co3w6")
texture_pressed = ExtResource("5_a0wnw")
texture_hover = ExtResource("6_mxhja")
texture_disabled = ExtResource("7_keclf")
stretch_mode = 3

[node name="Label" type="Label" parent="BG/M/V/V/PExitBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -6.0
offset_right = 22.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(24.75, 3)
theme_override_fonts/font = ExtResource("3_2dmkg")
theme_override_font_sizes/font_size = 8
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="BG/M/V/V/PResumeBtn" to="." method="_on_p_resume_btn_button_down"]
[connection signal="button_down" from="BG/M/V/V/PLoadBtn" to="." method="_on_p_load_btn_button_down"]
[connection signal="button_down" from="BG/M/V/V/PExitBtn" to="." method="_on_p_exit_btn_button_down"]
